# NovelNest

./: .gitignore  README.md  book_data.py  main.py  pyproject.toml
src/: api.py  config.py  main.py
src/books/: book_data.py  models.py  routes.py  schemas.py  service.py
src/database/: core.py
