[project]
name = "novelnest"
version = "0.1.0"
description = "A python backend for NovelNest, a web application for managing and reading novels."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.14",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
]
